After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691114 - "(constructor)" tag for clutter_color_alloc() is missing
"(constructor)" tag for clutter_color_alloc() is missing
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: Documentation
git master
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-04 07:15 UTC by Kouhei Sutou
Modified: 2013-01-16 22:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
It adds missing "(constructor)" tag (664 bytes, patch)
2013-01-04 07:15 UTC, Kouhei Sutou
committed Details | Review

Description Kouhei Sutou 2013-01-04 07:15:20 UTC
Created attachment 232712 [details] [review]
It adds missing "(constructor)" tag

clutter_color_alloc() is a constructor but it doesn't have "(constructor)" tag in documentation. So GObject Introspection can't detect that clutter_color_alloc() is a constructor.
Comment 1 Emmanuele Bassi (:ebassi) 2013-01-06 17:43:09 UTC
Review of attachment 232712 [details] [review]:

looks okay.
Comment 2 Emmanuele Bassi (:ebassi) 2013-01-16 22:56:45 UTC
thanks for the patch; pushed to the master and clutter-1.14 branches.