Add missing "(constructor)" tag to clutter_color_alloc()

https://bugzilla.gnome.org/show_bug.cgi?id=691114